--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ license="Apache License 2.0"
 	modId="pregen-protect" 
 	version="1.0.3" 
 	displayName="PreGen-Protect"
-	description='''Restarts a pregen process when server's ram is running out'''
+	description='''Restarts a pregen process when server's RAM is running out'''
 	side="SERVER"
 	authors="PT400C - Jomcraft Network"
 	credits="Developed by Jomcraft Network"
